--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <base target="_top">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BIG Teclogica</title>
+  <title>BIG</title>
   <style>
     * {
       margin: 0;
